Добавлена страиница Team menu на фронте. Добавлена функция выбора состава и выбора капитана по умолчанию перед стартом игры.

--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -11,6 +11,10 @@ body {
     color: snow;
 }
 
+.right_link{
+    text-align: right;
+}
+
 .loadGameText {
     font-family: "Arial Black", fantasy;
     font-size: 26px;
