Добавлена страница с возможностью добавить созданного игрока в свою команду

--- a/src/main/resources/static/registr/registr.css
+++ b/src/main/resources/static/registr/registr.css
@@ -8,15 +8,23 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
-.form-control,
-.registr_form{
-    text-align: center;
-    align-items: center;
-}
+/*.form-control,*/
+/*.registr_form{*/
+/*    text-align: center;*/
+/*    align-items: center;*/
+/*}*/
 
-.centerdiv{
+/*.centerdiv{*/
+/*    text-align: center;*/
+/*    margin-left: 260px;*/
+/*}*/
+
+input[type=text],
+input[type=number],
+select[typeof=text]{
     text-align: center;
-    margin-left: 260px;
+    width:400px;
+    height: 20px;
 }
 
 .ahmat,
