Добавлена функция найма и увольнения тренеров и закрепления за ними игроков для постоянной тренировки. Не устранен баг во время редиректа на странице

--- a/src/main/resources/static/registr/registr.css
+++ b/src/main/resources/static/registr/registr.css
@@ -19,11 +19,11 @@ body {
 /*    margin-left: 260px;*/
 /*}*/
 
-button{
-    margin: auto;
-    align-content: center;
+
+.div-button{
     align-items: center;
     align-self: center;
+    align-content: center;
     text-align: center;
 }
 
