Тотальный рефакторинг: Обновление раздела Transfer

--- a/src/main/resources/static/registr/registr.css
+++ b/src/main/resources/static/registr/registr.css
@@ -18,6 +18,7 @@ body {
 
 input[type=text],
 input[type=number],
+select[typeof=password],
 select[typeof=text]{
     margin: auto;
     align-content: center;
