Доюавление возможности загрузки игры. 5 коммит

--- a/src/main/resources/static/registr/registr.css
+++ b/src/main/resources/static/registr/registr.css
@@ -18,7 +18,7 @@ body {
 
 input[type=text],
 input[type=number],
-input[typeof=password],
+input[type=password],
 select[typeof=text]{
     margin: auto;
     align-content: center;
